Mobile menu z-index fix

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -41,6 +41,9 @@ a:active {
   height: 48px;
 }
 
+.site-nav {
+  z-index: 9999;
+}
 
 .site-nav .page-link {
   color: #fff;
